--- a/style.css
+++ b/style.css
@@ -286,6 +286,34 @@ header nav ul li:hover {
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
 }
 
+#aboutus{
+  scroll-snap-align: center;
+  background: url(Img/sectionhintergrund6.png);
+  margin-top: -2.1%;
+  margin-left: 13.2%;
+  width: 75%;
+  background-color: rgb(28, 28, 28);
+}
+
+#aboutus h3 {
+  margin-top: 8%;
+  font-size: 240%;
+  text-shadow: 3px 3px 0 #000;
+}
+
+#aboutus h4 {
+  font-size: 140%;
+  text-shadow: 3px 3px 0 #000;
+}
+
+#aboutus p {
+  letter-spacing: 0.05em;
+  font-size: 130%;
+  width: 53%;
+  margin: 0 auto 0 auto;
+}
+
+
 /**************************SONGS*****************************/
 
 #projects {
@@ -361,18 +389,13 @@ header nav ul li:hover {
 
 #Songs ul li p {
   font-size: 130%;
-  width: 75%;
+  width: 69%;
   margin: -5px auto 0 auto;
 }
 
 #Songs ul li img {
-  margin-top: -3%;
-  width: 25%;
-}
-
-#song_08 hr {
-  margin: 0 auto 2% auto;
-  margin-top: -0.4%;
+  margin-top: -2%;
+  width: 22%;
 }
 
 #textMot {
