--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ header nav ul li:hover {
 
 #Songs ul li {
   padding-top: 10%;
-  scroll-snap-align: none;
+  scroll-snap-align: center;
   padding-bottom: 10%;
 }
 
